Launcher3: Add quickpic & smsorganizer themed icon
Signed-off-by: Deepak5310 <37282143+Deepak5310@users.noreply.github.com>

--- a/res/xml/grayscale_icon_map.xml
+++ b/res/xml/grayscale_icon_map.xml
@@ -9,7 +9,8 @@
     <icon drawable="@drawable/themed_icon_duo" package="com.google.android.apps.tachyon" />
     <icon drawable="@drawable/themed_icon_google_assistant" package="com.google.android.apps.googleassistant" />
     <icon drawable="@drawable/themed_icon_messages" package="com.google.android.apps.messaging" />
-    <icon drawable="@drawable/themed_icon_messages" package="com.android.messaging" />    
+    <icon drawable="@drawable/themed_icon_messages" package="com.android.messaging" />
+    <icon drawable="@drawable/themed_icon_messages" package="com.microsoft.android.smsorganizer" />
     <icon drawable="@drawable/themed_icon_safety" package="com.google.android.apps.safetyhub" />
     <icon drawable="@drawable/themed_icon_calculator" package="com.google.android.calculator" />
     <icon drawable="@drawable/themed_icon_family_link" package="com.google.android.apps.kids.familylink" />
@@ -24,6 +25,7 @@
     <icon drawable="@drawable/themed_icon_photos" package="com.google.android.apps.photos" />
     <icon drawable="@drawable/themed_icon_photos" package="com.android.gallery3d" />
     <icon drawable="@drawable/themed_icon_photos" package="com.android.gallery" />
+    <icon drawable="@drawable/themed_icon_photos" package="com.alensw.PicFolder" />
     <icon drawable="@drawable/themed_icon_sheets" package="com.google.android.apps.docs.editors.sheets" />
     <icon drawable="@drawable/themed_icon_camera" package="com.google.android.GoogleCamera" />
     <icon drawable="@drawable/themed_icon_find_my_device" package="com.google.android.apps.adm" />
